Version 2.8.2:

* Established conventions that make the use of the environment variables
  PARLIAMENT_KB_CONFIG_PATH and PARLIAMENT_LOG_CONFIG_PATH unnecessary
  in most cases.

* Updated to Boost 1.84.0

* Migrated the Parliament GitHub repository from the SemWebCentral
  organization to the RaytheonBBN organization. This changed the project URL
  from 
    https://github.com/SemWebCentral/parliament
  to
    https://github.com/raytheonbbn/parliament
  although the old URL still redirects to the new one.


=================================================

Version 2.8.1 (2.8.0 was never released):

* In addition to releasing for Linux, Mac, and Windows machines, there is now
  a Docker image on Docker Hub (idemmons/parliament:2.8.1).

* Introduced a clean separation between Parliament's software and data files.
  The software files may now be read-only to the account under which Parliament
  is running, and the data files are easily moved to a writable location
  suitable for mass storage, such as an alternate partition, network mount,
  NAS or SAN device.  All data files, including log files, are now stored under
  the directory given by the kbDirectoryPath setting in ParliamentKbConfig.txt
  (default is kb-data under the installation directory).

* Changed the startup scripts on Linux/UNIX to properly support systemd service
  installation.

* Changed the startup scripts on Windows to parallel the Linux/UNIX scripts,
  and converted them to PowerShell.

* Fixed an issue on UNIX/Linux platforms that prevented the Parliament daemon
  from receiving SIGTERM signals, making Parliament difficult to use in a
  Docker container.

* Made the bdbCacheSize configuration parameter in ParliamentKbConfig.txt
  global across all graphs. Previously, a cache of this size was dedicated to
  each named graph. With this change, a single cache of this size is shared by
  all graphs. This is particularly beneficial to deployments that have a large