@@ -80,7 +80,7 @@ BOOST_AUTO_TEST_CASE(testConfigDefaultFileContainsDefaults)
 	BOOST_CHECK(equal(begin(defaults.logChannelLevels()), end(defaults.logChannelLevels()), begin(c.logChannelLevels())));
 }
 
-static constexpr auto k_validTestConfig = u8R"~~~(
+static constexpr auto k_validTestConfig = R"~~~(
 # Parameters file for the Parliament core DLL
  	 # Parameters file for the Parliament core DLL
 
@@ -138,7 +138,7 @@ BOOST_AUTO_TEST_CASE(testConfigReadFromFile)
 }
 
 // Note that the key 'logToFileMessedUp' is bad:
-static constexpr auto k_invalidTestConfig = u8R"~~~(
+static constexpr auto k_invalidTestConfig = R"~~~(
 # Parameters file for the Parliament core DLL
 
 logToConsole             = yes
