@@ -3,10 +3,12 @@ import os ;
 
 constant LinuxDistro : [ os.environ LINUX_DISTRO ] ;
 
+constant FLAGS_ubuntu22 : <cxxflags>"-std=c++20 -Wall" <linkflags>"-std=c++20" ;
 constant FLAGS_ubuntu20 : <cxxflags>"-std=c++17 -Wall" <linkflags>"-std=c++17" ;
 constant FLAGS_ubuntu18 : <cxxflags>"-std=c++17 -Wall" <linkflags>"-std=c++17" ;
 constant FLAGS_ubuntu17 : <cxxflags>"-std=c++14 -Wall" <linkflags>"-std=c++14" ;
 constant FLAGS_ubuntu16 : <cxxflags>"-std=c++14 -Wall" <linkflags>"-std=c++14" ;
+constant FLAGS_rhel9    : <cxxflags>"-std=c++20 -Wall" <linkflags>"-std=c++20 -lstdc++fs" ;
 constant FLAGS_rhel8    : <cxxflags>"-std=c++17 -Wall" <linkflags>"-std=c++17 -lstdc++fs" ;
 constant FLAGS_centos8  : <cxxflags>"-std=c++17 -Wall" <linkflags>"-std=c++17 -lstdc++fs" ;
 constant FLAGS_centos7  : <cxxflags>"-std=c++11 -Wall" <linkflags>"-std=c++11" ;
