@@ -14,7 +14,8 @@ constant BoostVersionAbbrvAlternatives : [ MATCH "([0-9]+_[0-9]+)_0" "([0-9]+_[0
 constant BoostVersionAbbrv : $(BoostVersionAbbrvAlternatives[1]) ;
 constant BdbVersion : [ os.environ BDB_VERSION ] ;
 
-constant COMPILER : vc142 ;
+constant COMPILER : vc143 ;
+#constant COMPILER : vc142 ;
 #constant COMPILER : vc141 ;
 #constant COMPILER : vc140 ;
 #constant COMPILER : vc120 ;
@@ -22,7 +23,8 @@ constant COMPILER : vc142 ;
 #constant COMPILER : vc100 ;
 #constant COMPILER : vc90 ;
 
-constant BdbLibDir : $(BdbDir)/msvc-14.2 ;
+constant BdbLibDir : $(BdbDir)/msvc-14.3 ;
+#constant BdbLibDir : $(BdbDir)/msvc-14.2 ;
 
 constant BoostLibDir : $(BoostDir)/stage-msvc/lib ;
 
